<resources>
    <string name="app_name">SeaSalon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="reservation">Reservation</string>
    <string name="home">Home</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Log Out</string>
    <string name="tentang_kami">about Us</string>
    <string name="privacy">Privacy</string>
    <string name="rate_us">Give us Feedback</string>
    <string name="Name_App">Sea Salon App</string>
    <string name="customer">Customer</string>
    <string name="welcome_back">Welcome Back to Sea Salon</string>
    <string name="add_reservation">Add New Reservation</string>
    <string name="haircuts_and_n_styling">Haircuts and \n Styling</string>
    <string name="facial_treatments">Facial Treatments</string>
    <string name="manicure_and_n_pedicure">Manicure and \n Pedicure</string>
    <string name="name">Name</string>
    <string name="sudah_punya_akun_login">You Have Account? Login</string>
    <string name="title_signup_page">Please Fill the blank</string>
    <string name="email">Email</string>
    <string name="signup">Register</string>
    <string name="regiseter">REGISETR</string>
    <string name="login">LOGIN</string>
    <string name="userid">UserId</string>
    <string name="password">Password</string>
    <string name="registerText">Never Have Account? \n Register Please</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="rate_us_desc">Rate Us</string>
    <string name="kritik_saran">Opinions and Feedback</string>
    <string name="err_pass_msg">Min 8\n</string>
    <string name="out">Logout</string>
    <string name="slogan">\"Beauty and Elegance Redefined”\"\nOur Service</string>
    <string name="ourContact">Our Contact</string>

    <string-array name="tipe_pelayanan">
        <item>HairCut</item>
        <item>Padecure</item>
        <item>Face Care</item>
        <!-- Tambahkan item lain sesuai kebutuhan -->
    </string-array>
</resources>