<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/baseline_auto_awesome_mosaic_24"
        android:iconTint="@color/white"/>

    <item
        android:id="@+id/reservation"
        android:title="@string/reservation"
        android:icon="@drawable/baseline_assignment_24"
        android:iconTint="@color/white" />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:iconTint="@color/white"
        android:icon="@drawable/baseline_person_24"/>

    <item
        android:id="@+id/logout"
        android:iconTint="@color/red"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/out" />
</menu>