<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_bg"
    tools:context=".ui.RegisterActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp">

    <TextView
        android:id="@+id/tregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/regiseter"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/title_signup_page"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tregister" />

    <TextView
        android:id="@+id/userId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="left"
        android:text="@string/userid"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/titleTextView"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        tools:ignore="RtlHardcoded" />


    <TextView
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="left"
        android:text="@string/full_name"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/ed_userId"
        app:layout_constraintStart_toStartOf="@+id/ed_userId"
        app:layout_constraintTop_toBottomOf="@+id/ed_userId"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="left"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/ed_full_name"
        app:layout_constraintStart_toStartOf="@+id/ed_full_name"
        app:layout_constraintTop_toBottomOf="@+id/ed_full_name"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/sudah_punya_akun_login"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/signupButton" />
    <TextView
        android:id="@+id/phoneText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="left"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/ed_email"
        app:layout_constraintStart_toStartOf="@+id/ed_email"
        app:layout_constraintTop_toBottomOf="@+id/ed_email"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="left"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/ed_phone_number"
        app:layout_constraintStart_toStartOf="@+id/ed_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/ed_phone_number"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/ed_userId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:background="@drawable/ed_background"
        android:hint="@string/userid"
        android:layout_margin="16dp"
        android:inputType="textPersonName"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/userId"
        app:layout_constraintStart_toStartOf="@+id/userId"
        app:layout_constraintTop_toBottomOf="@+id/userId" />

    <EditText
        android:id="@+id/ed_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/ed_background"
        android:hint="@string/full_name"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/fullName"
        app:layout_constraintStart_toStartOf="@+id/fullName"
        app:layout_constraintTop_toBottomOf="@+id/fullName" />


    <EditText
        android:id="@+id/ed_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/ed_background"
        android:hint="Phone Number"
        android:inputType="phone"
        android:padding="8dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/phoneText"
        app:layout_constraintStart_toStartOf="@+id/phoneText"
        app:layout_constraintTop_toBottomOf="@+id/phoneText" />

    <com.submisson.storyapp.customview.PasswordCustomEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/password"
        android:background="@drawable/ed_background"
        android:inputType="textPassword"
        android:padding="8dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/password_text"
        app:layout_constraintStart_toStartOf="@+id/password_text"
        app:layout_constraintTop_toBottomOf="@+id/password_text" />

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/ed_background"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />


    <Button
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/gold"
        android:text="@string/signup"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />


  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>